<resources>
    <string name="app_name">Peterstev Uremgba</string>
    <string name="loading">loading…</string>
    <string name="date_range">Date Range</string>
    <string name="filters">Filters</string>
    <string name="results">Results</string>
    <string name="countries">Countries</string>
    <string name="colors">Colors</string>
    <string name="bio">\'Duis consequat dui nec nisi volutpat eleifend. Donec ut dolor. Morbi vel lectus in quam fringilla rhoncus. Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis. Integer aliquet, massa id lobortis convallis, tortor risus dapibus augue, vel accumsan tellus nisi eu orci. Mauris lacinia sapien quis libero.\'</string>
    <string name="biotext">Bio:</string>
    <string name="username">Hernandez Stokes</string>
    <string name="gender_male">Male</string>
    <string name="date">Wed, 04 Mar 2020 03:34:31 GMT</string>
    <string name="female">Female</string>
    <string name="accountant">Accountant</string>
    <string name="uremgbachisom_gmail_com">uremgbachisom@gmail.com</string>
    <string name="red_toyoto_prado_2020">Red Toyoto Prado 2020</string>
    <string name="united_states">United States</string>
</resources>