<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/colorWhite"
    app:backgroundTint="@color/colorWhite"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    app:rippleColor="@color/colorDarkLight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/home_img_avatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/username"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_img_avatar"
            app:layout_constraintTop_toTopOf="@id/home_img_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/gender_male"
            android:textColor="@color/colorDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_img_avatar"
            app:layout_constraintTop_toBottomOf="@id/home_tv_username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/date"
            android:textColor="@color/colorDark"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_tv_gender" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/main_country_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:theme="@style/Widget.MaterialComponents.ChipGroup"
            app:itemSpacing="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_img_avatar"
            app:layout_constraintTop_toBottomOf="@id/home_tv_date"
            app:singleLine="false" />

        <View
            android:id="@+id/main_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:background="@color/colorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_img_avatar"
            app:layout_constraintTop_toBottomOf="@id/main_country_group" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/main_color_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"
            android:orientation="vertical"
            android:theme="@style/Widget.MaterialComponents.ChipGroup"
            app:itemSpacing="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_img_avatar"
            app:layout_constraintTop_toBottomOf="@id/main_separator"
            app:singleLine="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>